put the form js in another file, minor bugfix to form html and added focus visibility to css

--- a/css/styles.css
+++ b/css/styles.css
@@ -4,6 +4,24 @@
    margin: 0;
  }
 
+ a:focus-visible,
+ button:focus-visible {
+   outline: 3px solid blue;
+   outline-offset: 3px;
+   border-radius: 8px;
+ }
+
+ input:focus-visible,
+ textarea:focus-visible {
+   outline: 2px solid blue;
+   outline-offset: 2px;
+ }
+
+
+ :focus:not(:focus-visible) {
+   outline: none;
+ }
+
  .skip-link {
    position: absolute;
    left: -999px;
@@ -114,7 +132,6 @@
    opacity: 0;
    transform: translateY(-20px);
    transition: all 0, 4s ease-in-out;
-   pointer-events: none;
  }
 
  .ham-menu-list.show {
@@ -122,7 +139,6 @@
    opacity: 1;
    top: 80px;
    transform: translateY(0);
-   pointer-events: none;
    transition: all 0.4s ease;
  }
 
